--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ main {
   font-size: 1.8rem;
   font-weight: bold;
 }
+
+.logo a {
+  text-decoration: none;
+  color: inherit;
+}
   
 .search-box {
   display: flex;
